--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
 /* Styles for the dashboard (wp-admin/index.php) for the SO Dashboard Feed Widget */
 #dbfw_widget.postbox .handlediv { display: none; }
-#dbfw_widget { background: #FF9; }
-#dbfw_widget a:hover, #dbfw_widget a:active, #dbfw_widget a:focus { color: #036; }
+/* #dbfw_widget { background: #FF9; } */
